tests/meta_property/meta_property.exp
Error ----------------------------------------------------------------------------------------------- import_meta.js:5:1

Cannot cast `import.meta` to number literal `1` because `Import$Meta` [1] is incompatible with number literal `1` [2].
[incompatible-type]

   import_meta.js:5:1
      5| import.meta as 1; // Error
         ^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3115:20
                            v
   3115| type Import$Meta = {
   3116|   [string]: mixed,
   3117|   url?: string,
   3118|   ...
   3119| };
         ^ [1]
   import_meta.js:5:16
      5| import.meta as 1; // Error
                        ^ [2]


Error ----------------------------------------------------------------------------------------------- import_meta.js:6:1

Cannot cast `import.meta.XXX` to number literal `1` because `unknown` [1] is incompatible with number literal `1` [2].
[incompatible-type]

   import_meta.js:6:1
      6| import.meta.XXX as 1; // Error
         ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3116:13
   3116|   [string]: mixed,
                     ^^^^^ [1]
   import_meta.js:6:20
      6| import.meta.XXX as 1; // Error
                            ^ [2]


Error ------------------------------------------------------------------------------------------------ new_target.js:3:3

Cannot cast `new.target` to boolean because `unknown` [1] is incompatible with boolean [2]. [incompatible-type]

   new_target.js:3:3
   3|   new.target as boolean; // Error
        ^^^^^^^^^^ [1]

References:
   new_target.js:3:17
   3|   new.target as boolean; // Error
                      ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- new_target.js:11:5

Cannot cast `new.target` to boolean because `unknown` [1] is incompatible with boolean [2]. [incompatible-type]

   new_target.js:11:5
   11|     new.target as boolean; // Error
           ^^^^^^^^^^ [1]

References:
   new_target.js:11:19
   11|     new.target as boolean; // Error
                         ^^^^^^^ [2]



Found 4 errors
